--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header{
   background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
   height: 150px;
   text-align: center;
-  padding-top: 40px;
+  padding: 40px;
 }
 
 header > h1 {
